# Cookta-server/swagger.json
@@ -667,6 +667,94 @@
 			],
 			"type": "object",
 			"additionalProperties": false
+		},
+		"Food": {
+			"properties": {
+				"owner": {
+					"type": "string"
+				},
+				"name": {
+					"type": "string",
+					"default": "",
+					"x-nullable": true
+				},
+				"desc": {
+					"type": "string",
+					"default": "",
+					"x-nullable": true
+				},
+				"isPrivate": {
+					"type": "boolean",
+					"default": true,
+					"x-nullable": true
+				},
+				"published": {
+					"type": "boolean",
+					"default": false,
+					"x-nullable": true
+				},
+				"ingredients": {
+					"items": {
+						"$ref": "#/definitions/iIngredient"
+					},
+					"type": "array",
+					"default": [],
+					"x-nullable": true
+				},
+				"imageUploaded": {
+					"type": "number",
+					"format": "double"
+				},
+				"uploaded": {
+					"type": "number",
+					"format": "double"
+				},
+				"dose": {
+					"type": "number",
+					"format": "double",
+					"default": 4,
+					"x-nullable": true
+				},
+				"tags": {
+					"items": {
+						"type": "string"
+					},
+					"type": "array",
+					"default": [],
+					"x-nullable": true
+				},
+				"lastModified": {
+					"type": "number",
+					"format": "double"
+				},
+				"generated": {
+					"additionalProperties": true,
+					"type": "object",
+					"default": {},
+					"x-nullable": true
+				},
+				"subscriptions": {
+					"type": "number",
+					"format": "double"
+				},
+				"id": {
+					"type": "string",
+					"x-nullable": true
+				},
+				"foodId": {
+					"type": "string"
+				}
+			},
+			"required": [
+				"owner",
+				"imageUploaded",
+				"uploaded",
+				"lastModified",
+				"subscriptions",
+				"foodId"
+			],
+			"type": "object",
+			"additionalProperties": false
 		}
 	},
 	"info": {
@@ -1345,6 +1433,61 @@
 						"name": "mealingIdentity",
 						"required": true,
 						"type": "string"
+					}
+				]
+			}
+		},
+		"/subscription": {
+			"get": {
+				"operationId": "GetSubscribedFoods",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"items": {
+								"$ref": "#/definitions/Food"
+							},
+							"type": "array"
+						}
+					}
+				},
+				"tags": [
+					"Subscription"
+				],
+				"security": [
+					{
+						"Bearer": []
+					}
+				],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "SetSubscriptionState",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Subscription"
+				],
+				"security": [
+					{
+						"Bearer": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "body",
+						"required": true,
+						"type": "object"
 					}
 				]
 			}
